# gpu-lab

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: detect_pitch_alignment.cu  generate_gpu_lab_config.cmake  gpu_lab_pitch_config.cmake
common/: CMakeLists.txt
common/include/: buffer.hpp  buffer_storage.hpp  buffer_view.hpp  byte_storage.hpp  byte_storage_traits.hpp  cuda_check.hpp  device_ptr.hpp  experiment.hpp  image.hpp  image_view.hpp  memory_location.hpp  memory_resource.hpp  noncopyable.hpp  pinned_ptr.hpp  pitched_element.hpp  scoped_event.hpp  scoped_stream.hpp  scoped_timer.hpp  strided_bytes.hpp  tiled_image_view.hpp  unique_array.hpp  with_timer.hpp
common/include/gpu_lab/: buffer.hpp  buffer_view.hpp  byte_storage.hpp  byte_storage_traits.hpp  cuda_check.hpp  experiment.hpp  image.hpp  image_view.hpp  memory_location.hpp  memory_resource.hpp  memory_resource_concepts.hpp  pitched_element.hpp  scoped_event.hpp  scoped_stream.hpp  strided_bytes.hpp  tiled_image_view.hpp  with_timer.hpp
common/include/gpu_lab/detail/: byte_storage.hpp  byte_storage_traits.hpp  memory_resource.hpp  memory_resource_concepts.hpp
common/src/: experiment.cpp  memory_resource.cpp
docs/design/: README.md  device-async-arena.md  gpu-launch-wrappers.md
experiments/: CMakeLists.txt
experiments/01_memcpy_vectorised/: CMakeLists.txt  kernels.cu  kernels.cuh  main.cpp
tests/: CMakeLists.txt  test_buffer.cpp  test_image_view.cpp  test_unique_array.cpp  test_unique_ptrs.cpp
